# lab_riddler_server

./: .gitignore  client.py  client2.py  gui_template.py  gui_view.py  pyproject.toml  requests_interface.py  riddle_client.py  riddle_interface.py  template_gui.py  test_app.py  test_riddle_client.py  view.py  view_gui.py
