[tool.poetry]
name = "lab-riddler-server"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "lab_riddler_server"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
simple-term-menu = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
